@@ -114,6 +114,8 @@ networking operations instead of jEdit virtual file-systems.
 * Empty editors buffers that are no longer required (e.g.\ via theory
 imports) are automatically removed from the document model.
 
+* Improved monitor panel.
+
 * Improved Console/Scala plugin: more uniform scala.Console output,
 more robust treatment of threads and interrupts.
 
